fixed sponsors on mobile

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -196,6 +196,11 @@ p
   .mob-nav-header
     display: inline-block
 
+  .sponsor-grid .third
+    width: 100%
+    float: left
+    overflow: hidden
+    height: inherit
 
 @media (max-height: 700px)
   #logo
